--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
     "license": "MIT",
     "authors": [
         {
-            "name": ":author_name",
-            "email": ":author_email",
-            "homepage": ":author_website",
+            "name": "Laurence HR",
+            "email": "laurencehr@gmail.com",
+            "homepage": "http://daxes.net",
             "role": "Developer"
         }
     ],
